force-app/main/default/objects/PDLM__Compliance_Status__c/PDLM__Compliance_Status__c.object-meta.xml
<CustomObject>
    <description>Track individual compliance status for item revisions or manufacturer parts</description>
    <label>Compliance Status</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Compliance Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>