force-app/main/default/objects/PDLM__Compliance_Status__c/fields/PDLM__Compliance_Exemption__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Compliance_Exemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exemption</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PDLM__Compliance_Exemption__c.PDLM__Compliance_Specification__c</field>
            <operation>equals</operation>
            <valueField>$Source.PDLM__Compliance_Specification__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PDLM__Compliance_Exemption__c</referenceTo>
    <relationshipLabel>Compliance Statuses</relationshipLabel>
    <relationshipName>Compliance_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>