force-app/main/default/objects/PDLM__Compliance_Status__c/fields/PDLM__Status__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Status__c</fullName>
    <label>Declared Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDLM__Compliance_Statuses</valueSetName>
    </valueSet>
</CustomField>