force-app/main/default/objects/PDLM__Compliance_Status__c/fields/PDLM__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Unique_Key__c</fullName>
    <description>Used by the system to ensure there are no duplicate statuses</description>
    <inlineHelpText>maintained by the system to ensure there are no duplicate statuses</inlineHelpText>
    <label>Unique Key</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>