force-app/main/default/objects/PDLM__Compliance_Status__c/validationRules/PDLM__Need_Compliance_Status_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Need_Compliance_Status_Lookup</fullName>
    <active>true</active>
    <description>Either Manufacturer Part or Item Revision must be filled in.</description>
    <errorConditionFormula>AND(ISBLANK(PDLM__Manufacturer_Part__c),ISBLANK(PDLM__Item_Revision__c))</errorConditionFormula>
    <errorMessage>Either Manufacturer Part or Item Revision must be filled in.</errorMessage>
</ValidationRule>